--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,13 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
+        "test": "jest",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview"
     },
     "dependencies": {
+        "@types/swiper": "^6.0.0",
         "axios": "^1.7.7",
         "frontend": "file:",
         "jwt-decode": "^4.0.0",
@@ -18,20 +20,34 @@
         "react-hook-form": "^7.53.0",
         "react-icons": "^5.3.0",
         "react-router-dom": "^6.26.2",
-        "react-toastify": "^10.0.5"
+        "react-toastify": "^10.0.5",
+        "swiper": "^11.1.14"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.25.7",
+        "@babel/preset-react": "^7.25.7",
+        "@babel/preset-typescript": "^7.25.7",
         "@eslint/js": "^9.9.0",
+        "@testing-library/jest-dom": "^6.5.0",
+        "@testing-library/react": "^16.0.1",
+        "@testing-library/user-event": "^14.5.2",
+        "@types/jest": "^29.5.13",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.20",
+        "babel-jest": "^29.7.0",
         "eslint": "^9.9.0",
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.9",
         "globals": "^15.9.0",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "jest-transform-stub": "^2.0.0",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
+        "ts-jest": "^29.2.5",
         "typescript": "^5.5.3",
         "typescript-eslint": "^8.0.1",
         "vite": "^5.4.1"
