--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,9 @@ WORKDIR /app
 COPY . .
 
 RUN mvn clean package -Dmaven.test.skip=true
+RUN ls target/
 
+COPY target/*.jar app.jar
 
 ENV SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/postgres
 ENV SPRING_DATASOURCE_USERNAME=postgres
