build: docker file

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,7 +7,11 @@ COPY . .
 RUN mvn clean package -Dmaven.test.skip=true
 RUN ls target/
 
-COPY --from=build /app/target/*.jar /app/app.jar
+FROM openjdk:17-jdk-alpine AS final
+
+WORKDIR /app
+
+COPY --from=builder /app/target/*.jar /app/app.jar
 
 ENV SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/postgres
 ENV SPRING_DATASOURCE_USERNAME=postgres
