--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     container_name: backend
     ports:
       - 8080:8080
+    environment:
+      SPRING_PROFILES_ACTIVE: dev
     networks:
       - backend
 
