--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: ecomerce
   datasource:
-    url: jdbc:postgresql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
-    username: ${PROD_DB_USERNAME}
-    password: ${PROD_DB_PASSWORD}
+    url: jdbc:postgresql://localhost:5432/bootcamp
+    username: postgres
+    password: postgres
   jpa:
     show-sql: true
     database: postgresql
@@ -19,6 +19,7 @@ spring:
 spotify:
   client-id: 72aa391c620d45c29e0590a1bcb679be
   client-secret: c685961b3b564ad6a25e6a8ce3010d80
+
 
 server:
   port: 8080
